// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slider > renders correctly with class 1`] = `
<div>
  
  <span
    aria-disabled="false"
    class="relative flex touch-none items-center select-none w-64"
    data-orientation="horizontal"
    data-slider-impl=""
    data-slot="root"
    dir="ltr"
    id="v-0"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
      data-orientation="horizontal"
      data-slot="track"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-orientation="horizontal"
        data-slot="range"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    <span
      aria-label="Thumb"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5"
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="thumb"
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      tabindex="0"
    >
      
      
    </span>
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly with disabled 1`] = `
<div>
  
  <span
    aria-disabled="true"
    class="relative flex w-full touch-none items-center select-none cursor-not-allowed opacity-75"
    data-disabled=""
    data-orientation="horizontal"
    data-slider-impl=""
    data-slot="root"
    dir="ltr"
    id="v-0"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
      data-disabled=""
      data-orientation="horizontal"
      data-slot="track"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-disabled=""
        data-orientation="horizontal"
        data-slot="range"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    <span
      aria-label="Thumb"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5 cursor-not-allowed"
      data-disabled=""
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="thumb"
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
    >
      
      
    </span>
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly with id 1`] = `
<div>
  
  <span
    aria-disabled="false"
    class="relative flex w-full touch-none items-center select-none"
    data-orientation="horizontal"
    data-slider-impl=""
    data-slot="root"
    dir="ltr"
    id="volume"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
      data-orientation="horizontal"
      data-slot="track"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-orientation="horizontal"
        data-slot="range"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    <span
      aria-label="Thumb"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5"
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="thumb"
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      tabindex="0"
    >
      
      
    </span>
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly with min and max 1`] = `
<div>
  
  <span
    aria-disabled="false"
    class="relative flex w-full touch-none items-center select-none"
    data-orientation="horizontal"
    data-slider-impl=""
    data-slot="root"
    dir="ltr"
    id="v-0"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
      data-orientation="horizontal"
      data-slot="track"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-orientation="horizontal"
        data-slot="range"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    <span
      aria-label="Thumb"
      aria-orientation="horizontal"
      aria-valuemax="50"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5"
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="thumb"
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      tabindex="0"
    >
      
      
    </span>
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly with size lg 1`] = `
<div>
  
  <span
    aria-disabled="false"
    class="relative flex w-full touch-none items-center select-none"
    data-orientation="horizontal"
    data-slider-impl=""
    data-slot="root"
    dir="ltr"
    id="v-0"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
      data-orientation="horizontal"
      data-slot="track"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-orientation="horizontal"
        data-slot="range"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    <span
      aria-label="Thumb"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5"
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="thumb"
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      tabindex="0"
    >
      
      
    </span>
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly with size md 1`] = `
<div>
  
  <span
    aria-disabled="false"
    class="relative flex w-full touch-none items-center select-none"
    data-orientation="horizontal"
    data-slider-impl=""
    data-slot="root"
    dir="ltr"
    id="v-0"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative grow overflow-hidden rounded-full bg-accented h-2"
      data-orientation="horizontal"
      data-slot="track"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-orientation="horizontal"
        data-slot="range"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    <span
      aria-label="Thumb"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-4"
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="thumb"
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      tabindex="0"
    >
      
      
    </span>
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly with size sm 1`] = `
<div>
  
  <span
    aria-disabled="false"
    class="relative flex w-full touch-none items-center select-none"
    data-orientation="horizontal"
    data-slider-impl=""
    data-slot="root"
    dir="ltr"
    id="v-0"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative grow overflow-hidden rounded-full bg-accented h-1.5"
      data-orientation="horizontal"
      data-slot="track"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-orientation="horizontal"
        data-slot="range"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    <span
      aria-label="Thumb"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-3"
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="thumb"
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      tabindex="0"
    >
      
      
    </span>
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly with step 1`] = `
<div>
  
  <span
    aria-disabled="false"
    class="relative flex w-full touch-none items-center select-none"
    data-orientation="horizontal"
    data-slider-impl=""
    data-slot="root"
    dir="ltr"
    id="v-0"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
      data-orientation="horizontal"
      data-slot="track"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-orientation="horizontal"
        data-slot="range"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    <span
      aria-label="Thumb"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5"
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="thumb"
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      tabindex="0"
    >
      
      
    </span>
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly with tooltip 1`] = `
<div>
  
  <span
    aria-disabled="false"
    class="relative flex w-full touch-none items-center select-none"
    data-orientation="horizontal"
    data-slider-impl=""
    data-slot="root"
    dir="ltr"
    id="v-0"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
      data-orientation="horizontal"
      data-slot="track"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-orientation="horizontal"
        data-slot="range"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    
    
    <span
      aria-label="Thumb"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5"
      data-grace-area-trigger=""
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="thumb"
      data-state="closed"
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      tabindex="0"
    >
      
      
    </span>
    <!--teleport start-->
    <!--teleport end-->
    
    
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly with ui 1`] = `
<div>
  
  <span
    aria-disabled="false"
    class="relative flex w-full touch-none items-center select-none"
    data-orientation="horizontal"
    data-slider-impl=""
    data-slot="root"
    dir="ltr"
    id="v-0"
    style="--reka-slider-thumb-transform: translateX(-50%);"
  >
    
    
    
    <span
      class="relative grow overflow-hidden rounded-full h-2.5 bg-red-500"
      data-orientation="horizontal"
      data-slot="track"
    >
      
      <span
        class="absolute h-full rounded-full bg-primary"
        data-orientation="horizontal"
        data-slot="range"
        style="left: 0%; right: 100%;"
      >
        
        
      </span>
      
    </span>
    <span
      aria-label="Thumb"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5"
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="thumb"
      role="slider"
      style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      tabindex="0"
    >
      
      
    </span>
    
    <!--v-if-->
    
    
  </span>
  
</div>
`;

exports[`Slider > renders correctly within FormField 1`] = `
<div>
  <div
    class=""
    data-slot="root"
  >
    <div
      class=""
      data-slot="wrapper"
    >
      <div
        class="flex items-center justify-between gap-1"
        data-slot="labelWrapper"
      >
        <label
          class="block font-medium text-default"
          data-slot="label"
          for="v-0"
          id="v-0-label"
        >
          
          Label
          
        </label>
        <span
          class="text-muted"
          data-slot="hint"
          id="v-0-hint"
        >
          Hint
        </span>
      </div>
      <p
        class="text-muted"
        data-slot="description"
        id="v-0-description"
      >
        Description
      </p>
    </div>
    <div
      class="mt-1"
      data-slot="container"
    >
      
      <span
        aria-describedby="v-0-hint v-0-description v-0-help"
        aria-disabled="false"
        class="relative flex w-full touch-none items-center select-none"
        data-orientation="horizontal"
        data-slider-impl=""
        data-slot="root"
        dir="ltr"
        id="v-0"
        style="--reka-slider-thumb-transform: translateX(-50%);"
      >
        
        
        
        <span
          class="relative grow overflow-hidden rounded-full bg-accented h-2.5"
          data-orientation="horizontal"
          data-slot="track"
        >
          
          <span
            class="absolute h-full rounded-full bg-primary"
            data-orientation="horizontal"
            data-slot="range"
            style="left: 0%; right: 100%;"
          >
            
            
          </span>
          
        </span>
        <span
          aria-label="Thumb"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="block cursor-pointer rounded-full bg-default ring-2 focus-visible:outline-2 focus-visible:outline-offset-2 ring-primary focus-visible:outline-primary size-5"
          data-orientation="horizontal"
          data-reka-collection-item=""
          data-slot="thumb"
          role="slider"
          style="transform: var(--reka-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
          tabindex="0"
        >
          
          
        </span>
        
        <!--v-if-->
        
        
      </span>
      
      <p
        class="mt-1 text-muted"
        data-slot="help"
        id="v-0-help"
      >
        Help
      </p>
    </div>
  </div>
</div>
`;
